@@ -22,6 +22,26 @@ end_package
 
 begin_import
 import|import
+name|java
+operator|.
+name|nio
+operator|.
+name|ByteBuffer
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Map
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -63,26 +83,6 @@ operator|.
 name|records
 operator|.
 name|ContainerId
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|nio
-operator|.
-name|ByteBuffer
-import|;
-end_import
-
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
-name|Map
 import|;
 end_import
 
@@ -246,13 +246,13 @@ literal|0
 argument_list|)
 expr_stmt|;
 block|}
-name|result
-operator|=
 name|appMaster
 operator|.
 name|run
 argument_list|()
 expr_stmt|;
+name|result
+operator|=
 name|appMaster
 operator|.
 name|finish
